queXS 2.3.1 - Changes since 2.3.0

Fixed bug: Remove deprecated functions for php 7.4F
Fixed bug: Fix update to 1.13.0 procedure in CHANGELOG
New feature: Update search sample function

queXS 2.3.0 - Changes since 2.2.6

New feature: Allow operators to search the sample (visible fields only) and assign cases to themselves

New feature: Allow for samples to reference existing token records

Requires database update:
    alter table `case` drop index token;
    alter table `case` add index (`token`);

queXS 2.2.6 - Changes since 2.2.5

Fixed bug: LimeSurvey reports session mismatch with token

queXS 2.2.5 - Changes since 2.2.4

Updated translations - thank you to all those that contributed!

queXS 2.2.4 - Changes since 2.2.3

Fixed bug: Set sql_mode the way queXS expects it

queXS 2.2.3 - Changes since 2.2.2

Fixed bug: Make compatible with Adodb 5.21

New feature: Auto close and code a case on no answer / disconnected
New feature: Provide initial MySQL SSL support
New feature: Count self completes towards quotas

queXS 2.2.2 - Changes since 2.2.1

Fixed bug: incompatibility with PHP 7.2
Fixed bug: My appointments table obscured in alternate interface

queXS 2.2.1 - Changes since 2.2.0

New feature: Mark cases completed online in Limesuvey as completed in queXS during system sort process

queXS 2.2.0 - Changes since 2.1.5

Fixed issue: Extension column not wide enough for long extensions
Fixed issue: System sorting giving low priority where some quotas exist and not others

New feature: Assign cases to any operator to be called next in queue
New feature: Unassign all cases in the queue in one click

Database changes:
ALTER TABLE `extension` CHANGE `extension` `extension` CHAR( 20 ) NOT NULL;
ALTER TABLE `sample_var` ADD INDEX ( `var_id` );

queXS 2.1.5 - Changes since 2.1.4

Fixes some bugs including optimising the questionnaire outcome page queries. Translations have also been updated (Thank you!)

Fixed issue: Missing number of records per page in sample search