@@ -1,3 +1,7 @@
+
+
+INSERT INTO `outcome` (`outcome_id`, `aapor_id`, `description`, `default_delay_minutes`, `outcome_type_id`, `tryanother`, `contacted`, `tryagain`, `eligible`, `require_note`, `calc`, `default`, `permanent`) VALUES(46, '2.112b', 'Opted out online', 10080, 3, 0, 1, 1, 1, 1, 'R', 1, 1);
+
 queXS 2.3.1 - Changes since 2.3.0
 
 Fixed bug: Remove deprecated functions for php 7.4F
